# seat-planner

./: Cargo.toml  Makefile  index.html  plan.md
.github/workflows/: deploy.yml
src/: constraint.rs  guest.rs  lib.rs  main.rs  solver.rs  table.rs  ui.rs
