[package]
name = "seat-planner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Document", "Window"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
